--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <header class="flex justify-between items-center px-6 py-4">
     <h1 class="text-xl font-bold tracking-wider">AGRINEXUS</h1>
     <nav class="space-x-4 text-sm">
-      <a href="/smartfarm.html" class="hover:text-teal-300">Smart Farm</a>
-      <a href="#" class="hover:text-teal-300">Logistics</a>
-      <a href="#" class="hover:text-teal-300">Contract</a>
+      <a href="smartfarm.html" class="hover:text-teal-300">Smart Farm</a>
     </nav>
   </header>
 
@@ -28,18 +26,6 @@
       <h2 class="text-lg font-bold mb-1">Smart Farm</h2>
       <p class="text-sm text-gray-300">Monitor and manage your smart farming operations</p>
       <a href="smartfarm.html" class="mt-3 inline-block text-teal-400 text-sm hover:underline">View →</a>
-    </div>
-
-    <!-- Additional placeholder cards -->
-    <div class="bg-gray-900/80 p-6 rounded-xl">
-      <h2 class="text-lg font-bold mb-1">Logistics System</h2>
-      <p class="text-sm text-gray-300">Optimize your agriculture logistics and shipping costs</p>
-      <a href="#" class="mt-3 inline-block text-teal-400 text-sm hover:underline">View →</a>
-    </div>
-    <div class="bg-gray-900/80 p-6 rounded-xl">
-      <h2 class="text-lg font-bold mb-1">Contract Management</h2>
-      <p class="text-sm text-gray-300">Create and sign AI-powered farming contracts</p>
-      <a href="#" class="mt-3 inline-block text-teal-400 text-sm hover:underline">View →</a>
     </div>
   </main>
 </body>
