--- a/smartfarm.html
+++ b/smartfarm.html
@@ -2,12 +2,12 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AgriNexus - 스마트팜 AI 통합 시스템</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Farm AI</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background: url('/earth-bg.jpg') no-repeat center center fixed;
+      background: url('earth-bg.jpg') no-repeat center center fixed;
       background-size: cover;
     }
   </style>
@@ -16,58 +16,50 @@
   <header class="flex justify-between items-center px-6 py-4">
     <h1 class="text-xl font-bold tracking-wider">AGRINEXUS</h1>
     <nav class="space-x-4 text-sm">
-      <a href="/index.html" class="hover:text-teal-300">홈</a>
-      <a href="/pages/smartfarm.html" class="text-teal-400">스마트팜</a>
+      <a href="smartfarm.html" class="text-teal-400">Smart Farm</a>
     </nav>
   </header>
+
   <main class="max-w-5xl mx-auto py-10 px-6">
-    
-<h2 class="text-3xl font-bold mb-6">🌾 스마트팜 AI 통합 시스템</h2>
+    <h2 class="text-3xl font-bold mb-6">🌾 스마트팜 AI 통합 시스템</h2>
 
-<!-- 기능 1: AI 맞춤 작물 추천 -->
-<section class="mb-10">
-  <h3 class="text-xl font-semibold text-teal-400 mb-2">1. 지역별 맞춤 AI 작물 추천</h3>
-  <p class="text-sm text-gray-300 mb-4">기후, 토양, 계절 정보를 기반으로 수익성 높은 작물을 자동 추천합니다.</p>
-  <button class="bg-emerald-600 hover:bg-emerald-500 px-4 py-2 rounded text-white text-sm">작물 추천 받기</button>
-</section>
+    <section class="mb-8">
+      <h3 class="text-xl font-semibold text-teal-400 mb-2">1. 지역별 맞춤 AI 작물 추천</h3>
+      <p class="text-sm text-gray-300 mb-2">기후, 토양, 계절 정보를 기반으로 수익성 높은 작물을 자동 추천합니다.</p>
+      <a href="ai.html" class="bg-emerald-600 hover:bg-emerald-500 px-4 py-2 rounded text-white text-sm inline-block">작물 추천 받기</a>
+    </section>
 
-<!-- 기능 2: 스마트 재배 스케줄링 -->
-<section class="mb-10">
-  <h3 class="text-xl font-semibold text-teal-400 mb-2">2. 스마트 재배 일정 생성기</h3>
-  <p class="text-sm text-gray-300 mb-4">AI가 자동으로 파종-관리-수확-출하 일정을 설계해줍니다.</p>
-  <button class="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded text-white text-sm">일정 자동 생성</button>
-</section>
+    <section class="mb-8">
+      <h3 class="text-xl font-semibold text-teal-400 mb-2">2. 스마트 재배 일정 생성기</h3>
+      <p class="text-sm text-gray-300 mb-2">AI가 자동으로 파종-관리-수확-출하 일정을 설계해줍니다.</p>
+      <a href="schedule.html" class="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded text-white text-sm inline-block">일정 자동 생성</a>
+    </section>
 
-<!-- 기능 3: 자동 수익 예측 시스템 -->
-<section class="mb-10">
-  <h3 class="text-xl font-semibold text-teal-400 mb-2">3. 자동 수익 예측 및 시뮬레이션</h3>
-  <p class="text-sm text-gray-300 mb-4">재배 면적, 투입 비용 등을 입력하면 예상 수익과 ROI를 실시간 계산합니다.</p>
-  <button class="bg-yellow-600 hover:bg-yellow-500 px-4 py-2 rounded text-white text-sm">수익 시뮬레이션 실행</button>
-</section>
+    <section class="mb-8">
+      <h3 class="text-xl font-semibold text-teal-400 mb-2">3. 자동 수익 예측 및 시뮬레이션</h3>
+      <p class="text-sm text-gray-300 mb-2">재배 면적, 투입 비용 등을 입력하면 예상 수익과 ROI를 실시간 계산합니다.</p>
+      <a href="report.html" class="bg-yellow-600 hover:bg-yellow-500 px-4 py-2 rounded text-white text-sm inline-block">수익 시뮬레이션 실행</a>
+    </section>
 
-<!-- 기능 4: AI 스마트 계약서 생성 -->
-<section class="mb-10">
-  <h3 class="text-xl font-semibold text-teal-400 mb-2">4. 계약서 자동 생성 + 전자서명</h3>
-  <p class="text-sm text-gray-300 mb-4">거래 유형을 선택하면 계약서가 자동 생성되고 전자서명 기능이 포함됩니다.</p>
-  <button class="bg-purple-600 hover:bg-purple-500 px-4 py-2 rounded text-white text-sm">계약 생성 시작</button>
-</section>
+    <section class="mb-8">
+      <h3 class="text-xl font-semibold text-teal-400 mb-2">4. 계약서 자동 생성 + 전자서명</h3>
+      <p class="text-sm text-gray-300 mb-2">거래 유형을 선택하면 계약서가 자동 생성되고 전자서명 기능이 포함됩니다.</p>
+      <a href="contract.html" class="bg-purple-600 hover:bg-purple-500 px-4 py-2 rounded text-white text-sm inline-block">계약 생성 시작</a>
+    </section>
 
-<!-- 기능 5: 실시간 센서 모니터링 (모의) -->
-<section class="mb-10">
-  <h3 class="text-xl font-semibold text-teal-400 mb-2">5. IoT 센서 기반 환경 모니터링</h3>
-  <p class="text-sm text-gray-300 mb-4">온도, 습도, CO₂ 농도 등 센서 데이터를 실시간으로 시각화합니다. (데모 기반)</p>
-  <button class="bg-cyan-600 hover:bg-cyan-500 px-4 py-2 rounded text-white text-sm">센서 대시보드 열기</button>
-</section>
+    <section class="mb-8">
+      <h3 class="text-xl font-semibold text-teal-400 mb-2">5. IoT 센서 기반 환경 모니터링</h3>
+      <p class="text-sm text-gray-300 mb-2">온도, 습도, CO₂ 농도 등 센서 데이터를 실시간으로 시각화합니다. (데모 기반)</p>
+      <a href="iot.html" class="bg-cyan-600 hover:bg-cyan-500 px-4 py-2 rounded text-white text-sm inline-block">센서 대시보드 열기</a>
+    </section>
 
-<!-- 기능 6: AI 챗봇 + 긴급 경고 -->
-<section class="mb-10">
-  <h3 class="text-xl font-semibold text-teal-400 mb-2">6. AI 챗봇 상담 + 위험 알림 시스템</h3>
-  <p class="text-sm text-gray-300 mb-4">질문에 AI가 응답하며, 재해/기후 이상 발생 시 경고 메시지를 자동 발송합니다.</p>
-  <button class="bg-rose-600 hover:bg-rose-500 px-4 py-2 rounded text-white text-sm">AI 챗봇 상담 시작</button>
-</section>
+    <section class="mb-8">
+      <h3 class="text-xl font-semibold text-teal-400 mb-2">6. AI 챗봇 상담 + 위험 알림 시스템</h3>
+      <p class="text-sm text-gray-300 mb-2">질문에 AI가 응답하며, 재해/기후 이상 발생 시 경고 메시지를 자동 발송합니다.</p>
+      <a href="chat.html" class="bg-rose-600 hover:bg-rose-500 px-4 py-2 rounded text-white text-sm inline-block">AI 챗봇 상담 시작</a>
+    </section>
 
-<p class="mt-12 text-xs text-gray-400">※ 위 기능은 실제 API 또는 모듈 연동을 통해 실서비스화 가능합니다.</p>
-
+    <p class="mt-10 text-xs text-gray-500">※ 위 기능은 실서비스 연결 또는 API/모듈 연동을 통해 작동 가능합니다.</p>
   </main>
 </body>
 </html>
