--- a/smartfarm.html
+++ b/smartfarm.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head><meta charset="UTF-8"><title>스마트팜</title></head>
-<body style="background:#111; color:#fff; font-family:sans-serif;">
-<h2>스마트팜 상세 기능</h2>
-<ul>
-  <li><a href="ai.html" style="color:aqua;">작물 추천</a></li>
-  <li><a href="schedule.html" style="color:aqua;">일정 생성</a></li>
-</ul>
+<head>
+  <meta charset="UTF-8">
+  <title>Smart Farm</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      background: url('earth-bg.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
+  </style>
+</head>
+<body class="bg-black/80 text-white font-sans backdrop-blur px-6 py-8">
+  <h2 class="text-3xl font-bold mb-8 text-center">🌾 스마트팜 AI 기능</h2>
+  <div class="max-w-4xl mx-auto space-y-6">
+    <div class="bg-gray-900/80 p-6 rounded-xl">
+      <h3 class="text-lg font-semibold text-teal-400 mb-1">AI 작물 추천</h3>
+      <a href="ai.html" class="text-sm text-teal-300 hover:underline">→ 결과 보기</a>
+    </div>
+    <div class="bg-gray-900/80 p-6 rounded-xl">
+      <h3 class="text-lg font-semibold text-teal-400 mb-1">재배 일정 자동 생성</h3>
+      <a href="schedule.html" class="text-sm text-teal-300 hover:underline">→ 결과 보기</a>
+    </div>
+  </div>
 </body>
 </html>
