--- a/ai.html
+++ b/ai.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head><meta charset="UTF-8"><title>작물 추천</title></head>
-<body style="background:#111; color:#fff; font-family:sans-serif;">
+<head><meta charset="UTF-8"><title>AI 작물 추천</title></head>
+<body style="background:#000; color:#fff; font-family:sans-serif;">
 <h3>🌱 추천 작물 목록</h3>
 <ul>
 <li>부산 지역 추천 작물: 상추</li>
