--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body {
-      background: url('earth-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
-    }
+    body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
   </style>
 </head>
 <body class="bg-black/80 text-white font-sans backdrop-blur">
