--- a/smartfarm.html
+++ b/smartfarm.html
@@ -5,10 +5,7 @@
   <title>Smart Farm</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body {
-      background: url('earth-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
-    }
+    body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
   </style>
 </head>
 <body class="bg-black/80 text-white font-sans backdrop-blur px-6 py-8">
@@ -17,10 +14,6 @@
     <div class="bg-gray-900/80 p-6 rounded-xl">
       <h3 class="text-lg font-semibold text-teal-400 mb-1">AI 작물 추천</h3>
       <a href="ai.html" class="text-sm text-teal-300 hover:underline">→ 결과 보기</a>
-    </div>
-    <div class="bg-gray-900/80 p-6 rounded-xl">
-      <h3 class="text-lg font-semibold text-teal-400 mb-1">재배 일정 자동 생성</h3>
-      <a href="schedule.html" class="text-sm text-teal-300 hover:underline">→ 결과 보기</a>
     </div>
   </div>
 </body>
