--- a/index.html
+++ b/index.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AGRINEXUS 플랫폼</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>AGRINEXUS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
+    body {
+      background: url('earth-bg.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
   </style>
 </head>
 <body class="bg-black/80 text-white font-sans backdrop-blur">
-  <header class="bg-black px-6 py-4 flex justify-between items-center">
-    <h1 class="text-xl font-bold">아그리넥서스</h1>
-    <nav class="space-x-4 text-sm">
-      <a href="#" class="hover:underline">솔루션</a>
-      <a href="#" class="hover:underline">가격</a>
-      <a href="#" class="hover:underline">블로그</a>
-      <a href="#" class="hover:underline">소개</a>
-      <button class="bg-sky-700 px-4 py-1 rounded text-white">시작</button>
+  <header class="flex justify-between items-center px-6 py-4">
+    <h1 class="text-2xl font-bold tracking-wide">AGRINEXUS</h1>
+    <nav class="space-x-6 text-sm">
+      <a href="#" class="hover:text-teal-300">About</a>
+      <a href="#" class="hover:text-teal-300">Chat</a>
+      <a href="#" class="hover:text-teal-300">Sign up</a>
+      <button class="bg-slate-800 px-4 py-1 rounded text-sm">Sign up</button>
     </nav>
   </header>
 
-  <main class="text-center py-16 px-4">
-    <h2 class="text-4xl font-bold mb-2">AI 기반 농업 솔루션</h2>
-    <p class="text-gray-300 mb-6">AI의 힘을 활용하여 농업 운영을 최적화하고 혁신하세요.</p>
-    <a href="smartfarm.html" class="bg-teal-500 text-white px-6 py-2 rounded">시작</a>
+  <main class="text-center py-16 px-6">
+    <h2 class="text-4xl font-bold mb-4">AI-Powered Agricultural Solutions</h2>
+    <p class="text-gray-300 mb-6">Harness the power of AI to optimize and transform your agricultural operations.</p>
+    <a href="smartfarm.html" class="bg-teal-500 hover:bg-teal-400 text-white px-6 py-3 rounded font-semibold">Get Started</a>
   </main>
 
-  <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-6xl mx-auto pb-20 px-4">
-    <div class="bg-gray-800 p-6 rounded-xl">
-      <h3 class="font-bold text-lg mb-1">스마트 팜</h3>
-      <p class="text-sm text-gray-300">스마트 농업 운영 모니터링 및 관리</p>
-      <a href="smartfarm.html" class="text-teal-400 text-sm mt-2 inline-block">→ 보기</a>
-    </div>
+  <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-6xl mx-auto pb-20 px-6">
+    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Smart Farm</h3><p class="text-sm text-gray-300">Monitor and manage your smart farming operations</p><a href="smartfarm.html" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
+    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Logistics System</h3><p class="text-sm text-gray-300">Optimize required export documents for each country</p><a href="logistics.html" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
+    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Contract Management</h3><p class="text-sm text-gray-300">Automate and manage your agricultural contracts</p><a href="#" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
+    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Revenue Prediction</h3><p class="text-sm text-gray-300">Estimate and analyze crop revenue based on region and market</p><a href="report.html" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
+    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Export Documentation</h3><p class="text-sm text-gray-300">Generate required export documents for your crops</p><a href="#" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
+    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Active Users</h3><p class="text-teal-400 text-2xl">1,234 <span class="text-sm text-gray-400">online</span></p></div>
+    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Self-Learning System</h3><p class="text-sm text-gray-300">Improve AI and evolve features over time</p><a href="#" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
   </section>
+
+  <div class="fixed bottom-6 right-6">
+    <button class="bg-blue-700 hover:bg-blue-600 p-4 rounded-full shadow-lg text-white text-lg">💬</button>
+  </div>
 </body>
 </html>
