--- a/schedule.html
+++ b/schedule.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>재배 일정</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      background: url('earth-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
-    }
-  </style>
+<head><meta charset="UTF-8"><title>재배 일정 결과</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+  body {
+    background: url('earth-bg.jpg') no-repeat center center fixed;
+    background-size: cover;
+  }
+</style>
 </head>
 <body class="bg-black/80 text-white font-sans backdrop-blur">
-  <header class="flex justify-between items-center px-6 py-4">
-    <h1 class="text-xl font-bold tracking-wider">AGRINEXUS</h1>
-    <nav class="space-x-4 text-sm">
-      <a href="index.html" class="hover:text-teal-300">Home</a>
-      <a href="smartfarm.html" class="hover:text-teal-300">Smart Farm</a>
-    </nav>
-  </header>
-  <main class="max-w-4xl mx-auto py-10 px-6">
-    
-    <h3 class="text-2xl font-semibold mb-4">📅 재배 일정 예시</h3>
-    <ul class="list-disc text-sm text-gray-300 space-y-1">
+  <main class="max-w-3xl mx-auto py-10 px-6">
+    <h2 class="text-3xl font-bold mb-6">📅 재배 일정 자동 생성 결과</h2>
+    <ul class="list-disc list-inside text-sm text-gray-300 space-y-1">
       <li>파종 시작: 2024-04-01</li>
       <li>관리 작업: 2024-04-10</li>
       <li>수확 준비: 2024-04-25</li>
       <li>출하 예정: 2024-05-15</li>
     </ul>
-    
   </main>
 </body>
 </html>
