--- a/ai.html
+++ b/ai.html
@@ -1,34 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>작물 추천</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      background: url('earth-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
-    }
-  </style>
+<head><meta charset="UTF-8"><title>작물 추천 결과</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+  body {
+    background: url('earth-bg.jpg') no-repeat center center fixed;
+    background-size: cover;
+  }
+</style>
 </head>
 <body class="bg-black/80 text-white font-sans backdrop-blur">
-  <header class="flex justify-between items-center px-6 py-4">
-    <h1 class="text-xl font-bold tracking-wider">AGRINEXUS</h1>
-    <nav class="space-x-4 text-sm">
-      <a href="index.html" class="hover:text-teal-300">Home</a>
-      <a href="smartfarm.html" class="hover:text-teal-300">Smart Farm</a>
-    </nav>
-  </header>
-  <main class="max-w-4xl mx-auto py-10 px-6">
-    
-    <h3 class="text-2xl font-semibold mb-4">📋 추천 작물 (부산/봄)</h3>
-    <ul class="list-disc text-sm text-gray-300 space-y-1">
+  <main class="max-w-3xl mx-auto py-10 px-6">
+    <h2 class="text-3xl font-bold mb-6">📋 추천 작물 목록 (부산, 봄)</h2>
+    <ul class="list-disc list-inside space-y-1 text-sm text-gray-300">
       <li>상추</li>
       <li>청경채</li>
       <li>완두콩</li>
     </ul>
-    
+    <p class="mt-6 text-sm text-teal-400">기온 안정성, 병해 저항성, 수확 회전력, 시장성을 고려한 최적 추천</p>
   </main>
 </body>
 </html>
